--- a/GOOSMS/Calendar/trunk/Calendar.csproj
+++ b/GOOSMS/Calendar/trunk/Calendar.csproj
@@ -35,13 +35,17 @@
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
+    <UpdateUrl>http://orcs.sebsoft.com/FreeLifeSMS/</UpdateUrl>
+    <ProductName>FreeLifeSMS</ProductName>
+    <PublisherName>EliteRobot</PublisherName>
+    <WebPage>www.eliterobot.info</WebPage>
     <ApplicationRevision>11</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
