--- a/ORCSG4/RobotG4/Robot.csproj
+++ b/ORCSG4/RobotG4/Robot.csproj
@@ -275,23 +275,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <Content Include="Models\chassis_old.TVM" />
-    <Content Include="Models\pk.TVM" />
-    <Content Include="Models\pk8.TVM" />
-    <Content Include="Models\PK9.3DS" />
-    <Content Include="Models\pk9.tvm" />
-    <Content Include="Models\pk92.3DS" />
-    <Content Include="Models\pk92.max" />
-    <Content Include="Models\pk92.X" />
-    <Content Include="Models\ship.tvm" />
-    <Content Include="Models\wheel_l.TVM" />
-    <Content Include="Models\wheel_r.TVM" />
     <None Include="Models\chassis.TVM" />
-    <None Include="Models\chassis.TVM.AnkhSVN.0.tmp" />
     <None Include="Models\chassisx.TVM" />
     <None Include="Models\chassisxxx.TVM" />
+    <None Include="Models\chassis_old.TVM" />
     <None Include="Models\chassis_old2.TVM" />
+    <None Include="Models\pk.TVM" />
+    <None Include="Models\pk8.TVM" />
+    <None Include="Models\PK9.3DS" />
+    <None Include="Models\pk9.tvm" />
+    <None Include="Models\pk92.3DS" />
+    <None Include="Models\pk92.max" />
+    <None Include="Models\pk92.X" />
+    <None Include="Models\ship.tvm" />
+    <None Include="Models\wheel_l.TVM" />
     <None Include="Models\wheel_l0.TVM" />
+    <None Include="Models\wheel_r.TVM" />
     <None Include="Models\wheel_r0.TVM" />
     <None Include="Models\w_left.TVM" />
     <None Include="Package1.pkgxml" />
