--- a/ORCSG4/RobotG4/Robot.csproj
+++ b/ORCSG4/RobotG4/Robot.csproj
@@ -276,24 +276,24 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="ClassDiagram1.cd" />
-    <None Include="Models2\chassis.tvm" />
-    <None Include="Models2\chassisx.tvm" />
-    <None Include="Models2\chassisxxx.tvm" />
-    <None Include="Models2\chassis_old.tvm" />
-    <None Include="Models2\chassis_old2.tvm" />
-    <None Include="Models2\pk.tvm" />
-    <None Include="Models2\pk8.tvm" />
-    <None Include="Models2\PK9.3ds" />
-    <None Include="Models2\pk9.tvm" />
-    <None Include="Models2\pk92.3ds" />
-    <None Include="Models2\pk92.max" />
-    <None Include="Models2\pk92.x" />
-    <None Include="Models2\ship.tvm" />
-    <None Include="Models2\wheel_l.tvm" />
-    <None Include="Models2\wheel_l0.tvm" />
-    <None Include="Models2\wheel_r.tvm" />
-    <None Include="Models2\wheel_r0.tvm" />
-    <None Include="Models2\w_left.tvm" />
+    <Content Include="Models\chassis.tvm" />
+    <Content Include="Models\chassisx.tvm" />
+    <Content Include="Models\chassisxxx.tvm" />
+    <Content Include="Models\chassis_old.tvm" />
+    <Content Include="Models\chassis_old2.tvm" />
+    <Content Include="Models\pk.tvm" />
+    <Content Include="Models\pk8.tvm" />
+    <Content Include="Models\PK9.3ds" />
+    <Content Include="Models\pk9.tvm" />
+    <Content Include="Models\pk92.3ds" />
+    <Content Include="Models\pk92.max" />
+    <Content Include="Models\pk92.x" />
+    <Content Include="Models\ship.tvm" />
+    <Content Include="Models\wheel_l.tvm" />
+    <Content Include="Models\wheel_l0.tvm" />
+    <Content Include="Models\wheel_r.tvm" />
+    <Content Include="Models\wheel_r0.tvm" />
+    <Content Include="Models\w_left.tvm" />
     <None Include="Package1.pkgxml" />
     <None Include="Package2.pkgxml" />
     <None Include="Properties\app.manifest" />
@@ -476,6 +476,7 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Models2\" />
     <Folder Include="Particles\" />
     <Folder Include="Shaders\" />
   </ItemGroup>
