--- a/ORCSG4/RobotG4/Robot.csproj
+++ b/ORCSG4/RobotG4/Robot.csproj
@@ -275,7 +275,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="ClassDiagram1.cd" />
+    <None Include="RobotClass.cd" />
     <Content Include="Models\chassis.tvm" />
     <Content Include="Models\chassisx.tvm" />
     <Content Include="Models\chassisxxx.tvm" />
@@ -349,15 +349,15 @@
     <Content Include="Resources\AForge.Imaging.dll" />
     <Content Include="Resources\AForge.Math.dll" />
     <Content Include="Resources\apply.png" />
-    <None Include="Resources\Battery.jpg" />
-    <None Include="Resources\Battery2.png" />
-    <None Include="Resources\blank.png" />
-    <None Include="Resources\Batterysmall.png" />
-    <None Include="Resources\Batterysmall2.png" />
-    <None Include="Resources\back.png" />
+    <Content Include="Resources\Battery.jpg" />
+    <Content Include="Resources\Battery2.png" />
+    <Content Include="Resources\blank.png" />
+    <Content Include="Resources\Batterysmall.png" />
+    <Content Include="Resources\Batterysmall2.png" />
+    <Content Include="Resources\back.png" />
     <Content Include="Resources\CAMERA_activeX.htm" />
     <Content Include="Resources\CAMERA_activeX2.htm" />
-    <None Include="Resources\chip5.png" />
+    <Content Include="Resources\chip5.png" />
     <Content Include="Resources\compass.png" />
     <Content Include="Resources\compass1.png" />
     <Content Include="Resources\compass2.png" />
@@ -380,12 +380,12 @@
     <Content Include="Resources\kcmpci.png" />
     <Content Include="Resources\letecka_2.bmp" />
     <Content Include="Resources\linux.jpg" />
-    <None Include="Resources\linux2.png" />
-    <None Include="Resources\mic4.png" />
-    <None Include="Resources\math7.png" />
-    <None Include="Resources\logo_TU.jpg" />
-    <None Include="Resources\logo_Kaar.jpg" />
-    <None Include="Resources\logo_sjf.jpg" />
+    <Content Include="Resources\linux2.png" />
+    <Content Include="Resources\mic4.png" />
+    <Content Include="Resources\math7.png" />
+    <Content Include="Resources\logo_TU.jpg" />
+    <Content Include="Resources\logo_Kaar.jpg" />
+    <Content Include="Resources\logo_sjf.jpg" />
     <Content Include="Resources\LumiSoft.Net.dll" />
     <Content Include="Resources\mapa.bmp" />
     <Content Include="Resources\mapa_areal_tuke.bmp" />
@@ -396,31 +396,31 @@
     <Content Include="Resources\mapa_zlin.bmp" />
     <Content Include="Resources\Microsoft.DirectX.DirectInput.dll" />
     <Content Include="Resources\Microsoft.DirectX.dll" />
-    <None Include="Resources\mw_joomla_logo.png" />
+    <Content Include="Resources\mw_joomla_logo.png" />
     <Content Include="Resources\MTV3D65.dll" />
     <Content Include="Resources\OFF.png" />
-    <None Include="Resources\Openwrt_logo_small.jpg" />
-    <None Include="Resources\ON.gif" />
-    <None Include="Resources\ON2.gif" />
-    <None Include="Resources\ON3.gif" />
-    <None Include="Resources\ON4.gif" />
-    <None Include="Resources\ON5.gif" />
-    <None Include="Resources\ON9.gif" />
-    <None Include="Resources\ON0.gif" />
+    <Content Include="Resources\Openwrt_logo_small.jpg" />
+    <Content Include="Resources\ON.gif" />
+    <Content Include="Resources\ON2.gif" />
+    <Content Include="Resources\ON3.gif" />
+    <Content Include="Resources\ON4.gif" />
+    <Content Include="Resources\ON5.gif" />
+    <Content Include="Resources\ON9.gif" />
+    <Content Include="Resources\ON0.gif" />
     <Content Include="Resources\reload.png" />
-    <None Include="Resources\robot_logo.jpg" />
-    <None Include="Resources\sebsoft_logo.jpg" />
-    <None Include="Resources\robot_logo1.jpg" />
+    <Content Include="Resources\robot_logo.jpg" />
+    <Content Include="Resources\sebsoft_logo.jpg" />
+    <Content Include="Resources\robot_logo1.jpg" />
     <Content Include="Resources\Service Manager.png" />
     <Content Include="Resources\Services.png" />
     <Content Include="Resources\stop1.png" />
     <Content Include="Resources\TerminalControl.dll" />
     <Content Include="Resources\Tiger.Video.VFW.dll" />
-    <None Include="Resources\tu3.png" />
+    <Content Include="Resources\tu3.png" />
     <Content Include="Resources\tux.gif" />
     <Content Include="Resources\usb.png" />
     <Content Include="Resources\webcam.png" />
-    <None Include="Resources\wifi2.gif" />
+    <Content Include="Resources\wifi2.gif" />
     <Content Include="Resources\wifi2r.gif" />
     <Content Include="Resources\wifi2y.gif" />
     <Content Include="Robot.csproj.vspscc" />
